# JetExpansions

./: .gitignore  README.md  pyproject.toml
examples/: bigrams.ipynb  lenses.ipynb
src/jex/: __init__.py  jet.py  jet_expand.py  models.py  utils.py
src/jex/lenses/: iterative.py  joint.py  utils.py
src/jex/ngrams/: bigrams.py  utils.py
tests/: test_base.py  test_jet.py  test_models.py  test_toy_rn.py  test_utils.py
tests/with_models/: conftest.py  test_bigrams.py  test_jet_expansion.py  test_lenses.py  test_models.py
