[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jex"
version = "0.1.0"
description = "Jet expansions via torch autograd"
requires-python = "==3.11.*"
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
