[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jex"
version = "0.1.0"
description = "Jet expansions via torch autograd"
requires-python = "==3.11.*"
dependencies = [
    "torch",
    "numpy",
    "transformers",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jex"]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
